# NetherScript

./: Cargo.toml  NS_SEMA_CHECKS.md  README.md  functions_ownership.md
compile_examples/: borrow_checking.md  expr model  functions_ownership.md  structs_and_classes.md
compiler/ns-ast/: Cargo.toml
compiler/ns-atom/: Cargo.toml
compiler/ns-codegen/: Cargo.toml
compiler/ns-diagnostics/: Cargo.toml
compiler/ns-lexer/: Cargo.toml
compiler/ns-parser/: Cargo.toml
compiler/ns-sema/: Cargo.toml
compiler/ns-sir/: Cargo.toml  README.md
from/: Strategy.ts  expr.ns  foo.ts  main.ns  main.ts
nsc/: Cargo.toml
nsc/from/: a.ns  main.ns
nsc/src/: cli.rs  main.rs
nsc/test_ground/rust_ground/src/fns/: case1.rs  mod.rs
nsc/test_ground/ts_ground/: deno.json  package-lock.json
nsc/test_ground/ts_ground/src/: main.ts
nsc/test_ground/ts_ground/src/fns/: case1.ts  hello.ts
nsc/tests/: definite_assignment.rs  generic_type_args.rs  package_index_imports.rs  package_strict_visibility.rs  return_paths.rs
nsc/ts/: package-lock.json  package.json  tsconfig.json
nsc/ts/src/: main.ts
src/: build.rs  main.rs  netherscript.l
src/ast/: assign.rs  ast.rs  generate_ast.rs  mod.rs  module.rs
src/ast_parser/: mod.rs  parse_module.rs
src/atom/: mod.rs
src/er/: mod.rs  module.rs
src/front_end/: ast_to_er.rs  mod.rs  statmnt_gen.rs
src/ir/: mod.rs
src/lexer/: keyword.rs  lexer.rs  mod.rs  token.rs
src/middle_end/: mod.rs
src/parser/: mod.rs  parse.rs  parse_error.rs  parse_module.rs  parser.rs  syntax_error.rs
src/semantics/: mod.rs
src/syntax/: mod.rs
(+616 files in other folders)
