[package]
name = "netherscript"
version = "0.0.1"
edition = "2021"

[[bin]]
doc = false
name = "netherscript"

[dependencies]
ns-atom = { path = "../compiler/ns-atom" }
ns-ast = { path = "../compiler/ns-ast" }
ns-lexer = { path = "../compiler/ns-lexer"}
ns-parser = { path = "../compiler/ns-parser"}
ns-sema = { path = "../compiler/ns-sema"}
ns-sir = { path = "../compiler/ns-sir"}
ns-codegen = { path = "../compiler/ns-codegen"}